--- a/WeatherAppTest3/app/src/main/res/layout/fragment_day_forcast.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/fragment_day_forcast.xml
@@ -5,45 +5,42 @@
     android:paddingBottom="50dp">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:weightSum="4"
+        android:layout_height="100dp"
+        android:weightSum="5"
         android:orientation="horizontal" >
 
         <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:weightSum="4">
+            android:orientation="vertical">
             <ImageView
                 android:id="@+id/humidityBoxIcon"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:src="@drawable/ic_clear_sky"
-                android:layout_weight="1"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_pressure"
+                android:layout_gravity="center_horizontal|bottom"/>
             <TextView
                 android:id="@+id/humidityBox"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
+                android:gravity="center_horizontal|top"
                 android:textColor="#ffffff"
                 android:fontFamily="sans-serif-medium"
                 android:textSize="20sp"/>
 
             <ImageView
                 android:id="@+id/windSpeedBoxIcon"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:src="@drawable/ic_clear_sky"
-                android:layout_weight="1" />
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_humidity"
+                android:layout_gravity="center_horizontal|bottom"/>
 
             <TextView
                 android:id="@+id/windSpeedBox"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
+                android:gravity="center_horizontal|top"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
                 android:fontFamily="sans-serif-medium"/>
@@ -51,47 +48,45 @@
         <ImageView
             android:id="@+id/weatherIconBox"
             android:layout_width="0dp"
-            android:layout_height="130dp"
+            android:layout_height="100dp"
             android:scaleType="centerInside"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:src = "@drawable/ic_clear_sky"
             android:layout_gravity="center"/>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_weight="1"
-            android:weightSum="4">
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1">
             <ImageView
                 android:id="@+id/pressureBoxIcon"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_clear_sky"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_wind_speed"
+                android:layout_gravity="center_horizontal|bottom"/>
             <TextView
                 android:id="@+id/pressureBox"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
                 android:fontFamily="sans-serif-medium"
-                android:gravity="center"/>
+                android:gravity="center_horizontal|top"/>
             <ImageView
                 android:id="@+id/kIndexBoxIcon"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:src="@drawable/ic_clear_sky"
-                android:layout_weight="1"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_geostorm"
+                android:layout_gravity="center_horizontal|bottom"/>
             <TextView
                 android:id="@+id/kIndexBox"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
                 android:fontFamily="sans-serif-medium"
-                android:gravity="center"/>
+                android:gravity="center_horizontal|top"/>
         </LinearLayout>
     </LinearLayout>
     <FrameLayout
