--- a/WeatherAppTest3/app/src/main/res/layout/fragment_day_forecast2.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/fragment_day_forecast2.xml
@@ -4,7 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="50dp"
-    android:weightSum="4">
+    android:weightSum="4"
+    android:paddingTop="@dimen/default_margin"
+    android:paddingRight="@dimen/default_margin"
+    android:paddingLeft="@dimen/default_margin"
+    android:paddingStart="@dimen/default_margin">
     <ImageView
         android:id="@+id/weatherIconBox"
         android:layout_width="match_parent"
@@ -90,7 +94,7 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/ic_wind_speed"
-                android:layout_gravity="center_vertical|left"/>
+                android:layout_gravity="center_vertical|right"/>
             <TextView
                 android:id="@+id/pressureBox"
                 android:layout_width="match_parent"
@@ -111,7 +115,7 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/ic_geostorm"
-                android:layout_gravity="center_horizontal|bottom"/>
+                android:layout_gravity="center_horizontal|right"/>
             <TextView
                 android:id="@+id/kIndexBox"
                 android:layout_width="match_parent"
@@ -119,7 +123,7 @@
                 android:textColor="#ffffff"
                 android:textSize="20sp"
                 android:fontFamily="sans-serif-medium"
-                android:gravity="center_horizontal|top"/>
+                android:gravity="center_horizontal|left"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
